# estimator

./: CMakeLists.txt  LICENSE
data/: ideal_trace (copy).txt  ideal_trace.txt
include/: debug_tool.hpp  estimator.hpp  translate_xsens_msg.hpp
launch/: launch_estimator.launch
src/: another_optimize.cpp  estimator.cpp  ideal_trace_pub.cpp  mip.cpp  optimize.cpp  talker.cpp  translate_xsens_msg.cpp
